
cc_library(
	name = "iterator",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_tokenizer//:tokenizer",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_function_types//:function_types",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_conversion//:conversion"
	],
)
